Fixed View Exercise throwing error when the user try to see a database exercise by first checking both sources if there is the id of the exercise and then fetching the correct data. Added a temp loading screen to make sure it won't throw a visible error when no exerciseData is found

--- a/src/components/pages/Exercise/Exercise.module.css
+++ b/src/components/pages/Exercise/Exercise.module.css
@@ -3,81 +3,55 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
 }
-@media (min-width: 800px) {
-    .exercise-page{
-        grid-column: 2 / 4;
-        padding: 20px 50px;
-        width: 100%;
-        height: 100%;
-        padding: 50px 25%;
-    }
-}
-.exercise-page h3{
-    margin-left: 0;
-}
-.exercise-page .header{
-    display: flex;
-    flex-direction: column;
-}
-
-.timer{
-    background-color: #1A1A1B;
-    padding: 0 20px;
-    border-radius: 5px;
+.workout-page .page-header{
+    width: 100%;
     height: 50px;
+    display: grid;
+    grid-template-columns: 1fr 100px;
+    grid-template-rows: 1fr 2fr;
+}
+.workout-page .timer{
+    opacity: 0.5;
+    font-weight: 500;
+}
+.finish-button{
+    width: 100px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
+    background-color: var(--accent-color);
+    border: none;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
-.instructions{
-    width: 100%;
-    min-height: 0;
-    max-height: 300px;
+
+
+
+
+.current-exercise{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    overflow-y: auto;
+    align-items: center;
+    min-height: 325px;
+    
+    flex-grow: 1;
+    background-color: #1A1A1B;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
-.exercise-top{
+.current-exercise-header{
     width: 100%;
-    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.instructions p{
-    background-color: #1A1A1B;
-    padding: 10px;
-    border-radius: 5px;
-}
-.exercise{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    height: 300px;
-    width: 100%;
-    background-color: #1A1A1B;
-    border-radius: 5px;
-}
-h3{
-    padding: 0;
-}
-.exercise-header{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    margin-bottom: 20px;
-}
-.exercise-header p{
-    font-size: 1.5rem;
 
-}
-.exercise .fields{
+.current-exercise .fields{
     display: flex;
     width: 100%;
     gap: 5px;
@@ -123,26 +97,132 @@ h3{
     border: 1px solid lightgray;
 }
 
+.exercises{
+    width: calc(100vw - 30px);
+    min-height: 400px;
+    height: 400px;
+    transition: all 0.1s;;
+    overflow: hidden;
+    padding: 0;
+    transition: all 0.1s;
+    position: absolute;
+    right: 15px;
+    bottom: 75px;
+    background-color: #1A1A1B;
+    border: 1px solid var(--general-border);
+    z-index: 10;
+    animation-name: slideFromBottom;
+    animation-duration: 0.2s;
+}
+@keyframes slideFromBottom {
+    from{
+        bottom: -110%;
+    }
+    to{
+        bottom: 75px;
+    }
+}
+.exercises-container{
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 5px 0;
+}
+h3{
+    margin: 0;
+}
+.exercises-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    min-height: 50px;
+    width: 100%;
+    padding: 0 10px;
+    border-radius: 5px;
+    
+}
+.hide-exercises{
+    background-color: transparent;
+    border: none;
+}
+.exercise-body{
+    display: flex;
+    height: 50px;
+    min-height: 50px;
+    gap: 20px;
+    border-radius: 5px;
+    padding: 0 15px;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.1s;
+    overflow: hidden;
+}
 
-
-
-
-.fields{
+.selected-exercise{
+    background-color: #111214a6;
+    height: 40px;
+    
+}
+.sets-container{
+    width: 100%;
+    max-height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 10px;
+    align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.set{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+.current-set{
+    background-color: #11121481;
+}
+.set-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
+    height: 40px;
+}
+.set-fields{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.set-checkbox{
+    height: 30px;
+    width: 30px;
+}
+.completed-set{
+    opacity: 0.5;
+}
+.new-set-button{
+    background-color: transparent;
+    border: none;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .field{
     display: flex;
     align-items: center;
     width: 100%;
 }
-.exercise-fields{
-    width:100%;
-    height: calc(100% - 75px);
-    padding: 0 15px;
-}
+
 .field .field-input{
     display: flex;
     align-items: center;
@@ -174,51 +254,36 @@ h3{
 }
 
 
-
-.sets-controls{
+.content{
+    height: 100%;
+    max-height: calc(100vh - 250px);
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.buttons-container{
     height: 50px;
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
-    padding: 0 15px;
-    margin-top: auto;
-    margin-bottom: 10px;
 }
-.sets-controls .navigation-button{
-    height: 30px;
-}
-.sets-controls .field-icon{
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
-}
-.sets-controls .field-icon.selected-set-icon{
-    background-color:  #005AFF;
-    filter: invert(1);
-}
-.sets-icons{
-    flex-grow: 1;
+.buttons-container button{
+    border: 1px solid var(--general-border);
+    background-color: #1A1A1B;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    overflow-x: auto;
-}
-.buttons{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: auto;
-}
-.buttons button{
-    width: 30%;
-    height: 40px;
-    background-color: #111214;
-    border: 1px solid rgba(211, 211, 211, 0.2);
+    color: var(--text-color);
     border-radius: 5px;
-    font-size: 1.1rem;
+    height: 40px;
+    flex-grow: 1
+}
+.navigation-button{
+    width: 50px !important;
 }
 
